# filegram-desktop

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml  chocolatey.yml  flatpak.yml  homebrew.yml  release.yml  snap.yml
assets/icon/: filegram.icns  icon-64.rgba
assets/macos/: Info.plist
docker/: smoke-entrypoint.sh  smoke.Dockerfile
docs/superpowers/plans/: 2026-06-10-filegram-app.md
packaging/: chocolatey.md  homebrew.md  scoop.md
packaging/chocolatey/: README.md  filegram.nuspec
packaging/chocolatey/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1
packaging/flatpak/: README.md  cargo-sources.json  generate-cargo-sources.sh  io.github.filegram.Filegram.desktop  io.github.filegram.Filegram.local.yml  io.github.filegram.Filegram.metainfo.xml  io.github.filegram.Filegram.yml
packaging/linux/: filegram.desktop
packaging/windows/: filegram.iss
scripts/: bundle-macos.sh  set-version.sh  smoke-test.sh  stamp-version.sh
snap/: snapcraft.yaml
snap/gui/: filegram.desktop
src/: disk.rs  diskmap.rs  format.rs  fs_tree.rs  history.rs  i18n.rs  main.rs  release.rs  scanner.rs  settings.rs  treemap.rs
src/ui/: brick.rs  chrome.rs  mod.rs  start.rs
