[package]
name = "filegram"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
iced = { version = "0.14", features = ["canvas", "svg"] }
rayon = "1"
open = "5"
trash = "5.2.6"
opener = { version = "0.8.4", features = ["reveal"] }
dirs = "6"
fs4 = "1.1.0"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
